# Voice-Forge

./: .dockerignore  .env  .env.example  .env.template  .gitignore  API_ENDPOINTS_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.simple  GOOGLE_OAUTH_SETUP.md  IMPROVEMENT_PLAN.md  INTERNAL_DEVELOPMENT_DOCUMENTATION.md  LIVE_STREAMING_PLAN.md  README.md  SDK_SETUP_GUIDE.md  TECHNOLOGY_STACK_REPORT.md  alembic.ini  check_api_keys.py  cleanup_test_user.py  docker-compose.simple.yml  docker-compose.yml  fix_enum_values.py  fix_user_roles.py  full_database_migration.py  init_database.py  install_ffmpeg.bat  install_minimal.bat  install_requirements.bat  migrate_database.py  migrate_plans_table.py  pyproject.toml  requirements-minimal.txt  requirements-oauth.txt  requirements.txt  setup_ffmpeg_windows.bat  setup_local.py  setup_voiceforge_db.bat  test_api.py  test_api_key.py  test_upload.html  (+3 more)
.claude/: settings.local.json
alembic/: README  env.py
benchmarks/: performance_test.py
database/: add_plans_table.sql  init.sql  init_simple.sql  production_schema.sql
docs/: API_TEST_INSTRUCTIONS.md  COMPLETE_DEVELOPMENT_GUIDE.md  CRITICAL_API_ANALYSIS.md  DEPLOYMENT.md  PRODUCTION_READINESS_REPORT.md  SDK_ENDPOINTS_STATUS.md  SETUP.md  graphql_api.md  plan.md  progress.md  research_findings.md
k8s/: README.md  api.yaml  configmap.yaml  deploy.sh  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  worker.yaml
k8s/patches/: api-patch.yaml  worker-patch.yaml
sdk/javascript/: package.json
sdk/python/: README.md  setup.py
src/app/: __init__.py  auth_google.py  main_api_service.py
src/database/: connection.py  models.py  repositories.py
src/services/: email_service.py  usage_monitor.py
static/css/: style.css
static/js/: app.js  playground.js  (+1 more)
templates/: admin_login.html  developer_portal.html  developer_portal_modern.html  docs.html  docs_modern.html  index.html  landing_modern.html  landing_phase3.html  reset_password.html  stats_dashboard.html
tests/: conftest.py  load_test.py
(+18 files in other folders)
